--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 	<head>
 		<title>hehehehehaw</title>
+		<script>
+			console.log("why are you in the console...")
+		</script>
 	</head>
 	<body>
 		<h1>
