--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>hehehehehaw</title>
+		<link rel="icon" type="image/x-icon" href="oignon.png">
 		<script>
 			console.log("why are you in the console...")
 		</script>
